[tool.poetry]
name = "attendance-api"
version = "0.1.0"
description = "Attendance tracking app for the Cloud Native Full Stack Development PESU I/O Course"
authors = ["Srujan Deshpande <srujan.deshpande@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
